[TP03] Question 7, ajout  et initialisation de la variable voisins.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ out/production/M2201 - TP/M2201/TP/Main.class
 /dist/
 *.class
 out/production/M2201 - TP/META-INF/M2201 - TP.kotlin_module
+nbproject/private/private.xml
+nbproject/project.properties
+*.xml
