[TP07] Question 2, implémentation de la classe des etats et de l'état initial.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ out/production/M2201 - TP/META-INF/M2201 - TP.kotlin_module
 nbproject/private/private.xml
 nbproject/project.properties
 *.xml
+nbproject/private/private.xml
